# python_labs

./: .coverage  README.md  README_lab01-02.md  README_lab01.md  pyproject.toml
data/: 2.txt  3.txt  a1.txt  b.txt  proba.txt  report_total.csv  reprot_per_file.csv
data/lab04/: 1.txt  b.txt  b1.txt  out copy.csv  out.csv  report_total.csv  report_total1.csv  reprot_per_file1.csv
data/lab06/result/: people.xlsx
data/lab08/: students_output.json
data/lab09/: students.csv
data/output/: cities.xlsx
data/samples/: ex.json  vegetables.csv
data/samples/result/: cities.xlsx  people.xlsx  vegetables.json  vegetables.xlsx
src/lab01/: README_lab01.md  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py
src/lab02/: ex01.py  ex02.py  ex03.py  test.py
src/lab03/: ex01.py  text.py  text_status.py
src/lab04/: io_txt_csv.py  python  test.py  text.py  text_report.py
src/lab05/: json_csv.py
src/lab06/: cli_convert.py  cli_text.py  text.py
src/lab08/: __init__.py  models.py  serialize.py
src/lab09/: group.py
src/lab10/: README.md  __init__.py  structures.py
src/lib/: __init__.py  lib.py  text.py
tests/: test_json_csv.py  test_text.py
